# eviolite

./: Cargo.toml  LICENSE  README.md  bibliography.txt  references.bib  rustfmt.toml
benches/: pi_frac.rs  var_and.rs
examples/: approx_sin.rs  pi_frac.rs
src/: alg.rs  crossover.rs  fitness.rs  hof.rs  lib.rs  mutation.rs  pop.rs  prelude.rs  repro_rng.rs  repro_thread_rng.rs  select.rs  stats.rs  testutils.rs  traits.rs  utils.rs
src/select/: nsga.rs  tournament.rs  utils.rs
src/utils/: cache.rs  cached.rs
tests/: pi_frac.rs
