[package]
name = "eviolite"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A platform for working with evolutionary algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.6.1"
ndarray = { version = "0.15.6", optional = true }

[dev-dependencies]
criterion = "0.4.0"
itertools = "0.10.5"
num = "0.4.0"

[[bench]]
name = "var_and"
harness = false

[[bench]]
name = "pi_frac"
harness = false