[package]
name = "eviolite"
version = "0.1.0"
authors = ["Jacqueline Kulas"]
edition = "2021"
description = "Toolkit for working with evolutionary algorithms"
documentation = "https://docs.rs/eviolite"
readme = "README.md"
repository = "https://github.com/jqkul/eviolite"
license = "MIT"

[dependencies]
itertools = "0.10"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.6"

ndarray = { version = "0.15", optional = true }
num-traits = { version = "0.2", optional = true }
rand_distr = { version = "0.4", optional = true }

[features]
ndarray = ["dep:ndarray", "dep:num-traits", "dep:rand_distr"]

[dev-dependencies]
criterion = "0.4"
num = "0.4"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]